package log121.lab2.controller;

public class ImageController {
    private Image image;
}
