package log121.lab2.controller;

public class OptionController {
    public void loadView(){}

    public void saveImage(){}
}
