package log121.lab2.view;

public abstract class ImageView {

    public abstract void activate();

    public abstract void deActivate();
}
