package log121.lab2.view;public class ModificationImageView {
}
