package log121.lab2.view;

public class Observer {

    public void update(){

    }
}
